--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -7,24 +7,37 @@
     border-bottom: 1px solid #ccc;
     .logo {
         width: 20%;
+        height: 100%;
+        display: flex;
+        justify-content: flex-start;
+        margin-left: 16px;
+        
+        img {
+            width: 70%;
+            cursor: pointer;
+            height: 100%;
+        }
     }
 
     .search {
         flex: 1;
+        position: relative;
 
-        .search-input {
+        &-input {
             width: 70%;
             border-radius: 20px;
             height: 40px;
-            padding: 8px 12px;
+            padding: 8px 20px 8px 48px;
             font-size: 1.6rem;
             background-color: var(--background-secondary);
             color: var(--text-primary);
+            text-align: center;
 
             &::placeholder {
                 /* Chrome, Firefox, Opera, Safari 10.1+ */
                 color: var(--text-secondary);
                 opacity: 1; /* Firefox */
+                text-align: center;
             }
 
             &:-ms-input-placeholder {
@@ -37,8 +50,44 @@
                 color: var(--text-secondary);
             }
         }
+
+        &-icon {
+            position: absolute;
+            width: 20px;
+            left: 20px;
+            top: 10px;
+            color: var(--text-secondary);
+        }
     }
 
     .user {
+        display: flex;
+        gap: 12px;
+        margin-right: 12px;
+        &-avatar, &-noti, &-mess {
+            cursor: pointer;
+            background-color: var(--icon-background);
+            border-radius: 20px;
+            width: 40px;
+            height: 40px;
+            overflow: hidden;
+        }
+
+        &-avatar {
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &-noti, &-mess {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                filter: var(--icon-color)
+            }
+        }
     }
 }
