--- a/src/Theme.scss
+++ b/src/Theme.scss
@@ -4,6 +4,10 @@
     --background-secondary: #f0f2f5;
     --text-primary: #161823;
     --text-secondary: #65676b;
+
+    --icon-color: #050505;
+    --icon-background: #e4e6eb;
+    
     --secondary-color: #fbd542;
     --font-family: "ProximaNova", sans-serif;
     // --default-layout-header-height: 60px;
@@ -17,5 +21,9 @@
     --background-secondary: #3a3b3c;
     --text-primary: white;
     --text-secondary: #b0b3b8;
+
+    --icon-color: invert(94%) sepia(11%) saturate(72%) hue-rotate(185deg) brightness(97%) contrast(93%);;
+    --icon-background: #3a3b3c;
+
     --secondary-color: grey;
 }
