--- a/src/Theme.scss
+++ b/src/Theme.scss
@@ -1,29 +1,33 @@
 :root {
     --header-color: #fff;
-    --background: #fff;
+
     --background-secondary: #f0f2f5;
+
     --text-primary: #161823;
     --text-secondary: #65676b;
 
     --icon-color: #050505;
     --icon-background: #e4e6eb;
-    
+
     --secondary-color: #fbd542;
-    --font-family: "ProximaNova", sans-serif;
+    --font-family: "Lexend Deca", sans-serif;
     // --default-layout-header-height: 60px;
     // --default-layout-width: 1200px;
     // --default-layout-horizontal-spacer: 24px;
 }
 
 [data-theme="dark"] {
-    --header-color: #242526;
-    --background: black;
-    --background-secondary: #3a3b3c;
+    --header-color: #093545;
+
+    --background-secondary: #224957;
+
     --text-primary: white;
     --text-secondary: #b0b3b8;
 
-    --icon-color: invert(94%) sepia(11%) saturate(72%) hue-rotate(185deg) brightness(97%) contrast(93%);;
-    --icon-background: #3a3b3c;
+    --icon-color: invert(94%) sepia(11%) saturate(72%) hue-rotate(185deg)
+        brightness(97%) contrast(93%);
+    --icon-background: #224957;
 
     --secondary-color: grey;
+    --font-family: "Lexend Deca", sans-serif;
 }
