--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -21,7 +21,7 @@
     border-bottom: 1px solid var(--border-color);
     .logo {
         width: 100%;
-        max-width: 360px;
+        max-width: 23.3%;
         height: 100%;
         display: flex;
         justify-content: flex-start;
@@ -44,6 +44,7 @@
         position: relative;
 
         &-input {
+            margin-left: 12px;
             width: 99%;
             border-radius: 20px;
             height: 40px;
@@ -74,7 +75,7 @@
         &-icon {
             position: absolute;
             width: 20px;
-            left: 20px;
+            left: 30px;
             top: 10px;
             color: var(--text-secondary);
         }
@@ -85,34 +86,18 @@
         gap: 12px;
         margin-right: 12px;
         width: 100%;
-        max-width: 360px;
+        max-width: 23.3%;
         justify-content: flex-end;
-        &-avatar,
-        &-noti,
-        &-mess {
+        &-avatar {
             cursor: pointer;
             background-color: var(--icon-background);
             border-radius: 20px;
             width: 40px;
             height: 40px;
             overflow: hidden;
-        }
-
-        &-avatar {
             img {
                 width: 100%;
                 height: 100%;
-            }
-        }
-
-        &-noti,
-        &-mess {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            img {
-                filter: var(--icon-color);
             }
         }
     }
