--- a/src/Pages/Profile/profile.scss
+++ b/src/Pages/Profile/profile.scss
@@ -3,6 +3,10 @@
     --profile-text-color: #224957;
     --profile-primary: #000000;
     --menu-hover: #ededed;
+    --sidebar-border-color: #cccccc;
+
+    --post-background-color: #fff;
+    --upload-input-color: #e5e8ed;
 }
 
 [data-theme="dark"] {
@@ -10,6 +14,10 @@
     --profile-text-color: #fff;
     --profile-primary: #20df7f;
     --menu-hover: #093545;
+    --sidebar-border-color: #cccccc80;
+
+    --post-background-color: #0c3e50;
+    --upload-input-color: #3f5c66;
 }
 
 .profile {
@@ -19,41 +27,50 @@
     gap: 16px;
 
     &-col-side {
-        width: 360px;
+        width: 23.3%;
+        // position: fixed;
     }
+
     &-col-central {
+        margin: 0 23.3%;
         flex: 1;
-    }
-    .profile-col-side.col-1 {
-        .menu {
-            width: 100%;
-            margin: 12px 8px;
-            &-item {
-                height: 52px;
-                display: flex;
-                align-items: center;
-                padding: 16px 16px;
-                cursor: pointer;
-                margin-bottom: 2px;
+        display: flex;
+        justify-content: center;
 
-                img {
-                    margin-right: 16px;
-                    width: 36px;
-                    height: 36px;
-                    border-radius: 20px;
-                }
+        .feeds {
+            width: 80%;
+            margin-top: 19px;
+            .upload-section {
+                .upload {
+                    background-color: var(--post-background-color);
+                    display: flex;
+                    align-items: flex-start;
+                    padding: 16px;
+                    border-radius: 8px;
+                    gap: 12px;
 
-                h3 {
-                    color: var(--text-primary);
-                    font-size: 1.5rem;
-                    font-weight: 500;
-                }
+                    img {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 20px;
+                    }
 
-                &:hover {
-                    background-color: var(--menu-hover);
-                    border-radius: 12px;
+                    .upload-input {
+                        cursor: pointer;
+                        background-color: var(--upload-input-color);
+                        color: var(--text-primary);
+                        height: 69px;
+                        width: 100%;
+                        border-radius: 16px;
+                        padding: 6px 12px;
+                    }
                 }
             }
         }
+    }
+
+    .profile-col-side.col-2 {
+        position: fixed;
+        right: 0;
     }
 }
