Update upload post

--- a/src/Components/SideBar/sideBar.scss
+++ b/src/Components/SideBar/sideBar.scss
@@ -1,5 +1,5 @@
-.profile {
-    .profile-col-side.col-1 {
+.feed {
+    .feed-col-side.col-1 {
         height: 100vh;
         overflow: hidden;
         border-right: 1px solid var(--sidebar-border-color);
