--- a/src/Pages/Feed/feed.scss
+++ b/src/Pages/Feed/feed.scss
@@ -1,7 +1,7 @@
 :root {
-    --profile-background: #fff;
-    --profile-text-color: #224957;
-    --profile-primary: #000000;
+    --feed-background: #fff;
+    --feed-text-color: #224957;
+    --feed-primary: #000000;
     --menu-hover: #ededed;
     --sidebar-border-color: #cccccc;
 
@@ -10,9 +10,9 @@
 }
 
 [data-theme="dark"] {
-    --profile-background: #093545;
-    --profile-text-color: #fff;
-    --profile-primary: #20df7f;
+    --feed-background: #093545;
+    --feed-text-color: #fff;
+    --feed-primary: #20df7f;
     --menu-hover: #093545;
     --sidebar-border-color: #cccccc80;
 
@@ -20,7 +20,7 @@
     --upload-input-color: #3f5c66;
 }
 
-.profile {
+.feed {
     display: flex;
     min-height: calc(100vh - var(--header-height));
     background-color: var(--background-secondary);
@@ -69,8 +69,29 @@
         }
     }
 
-    .profile-col-side.col-2 {
+    .feed-col-side.col-2 {
         position: fixed;
         right: 0;
+    }
+}
+
+.feed-modal {
+    .ant-modal-title {
+        text-align: center;
+        font-size: 2.4rem;
+        padding-bottom: 16px;
+        border-bottom: 1px solid #eee;
+    }
+
+    .ant-modal-body {
+        textarea {
+            border: none;
+            padding: 8px;
+            font-size: 1.8rem;
+
+            &:focus {
+                box-shadow: none;
+            }
+        }
     }
 }
