--- a/src/Pages/Feed/feed.scss
+++ b/src/Pages/Feed/feed.scss
@@ -12,6 +12,9 @@
     --react-text-color: #333;
     --react-icon-color: invert(11%) sepia(0%) saturate(1452%) hue-rotate(158deg)
         brightness(99%) contrast(77%);
+    --like-react-color: #2374e1;
+    --like-react-btn: invert(53%) sepia(90%) saturate(5524%) hue-rotate(203deg)
+        brightness(94%) contrast(87%);
 }
 
 [data-theme="dark"] {
@@ -28,6 +31,9 @@
     --react-text-color: #fff;
     --react-icon-color: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg)
         brightness(103%) contrast(103%);
+    --like-react-color: #89cff0;
+    --like-react-btn: invert(74%) sepia(16%) saturate(1037%) hue-rotate(165deg)
+        brightness(105%) contrast(88%);
 }
 
 .feed {
@@ -98,7 +104,7 @@
                         align-items: center;
                         margin: 8px 16px;
                         gap: 8px;
-                        justify-content: space-between;
+                        // justify-content: space-between;
 
                         div {
                             display: flex;
@@ -108,11 +114,9 @@
                         }
 
                         .like {
-                            color: #2374e1;
+                            color: var(--like-react-color);
                             img {
-                                filter: invert(53%) sepia(90%) saturate(5524%)
-                                    hue-rotate(203deg) brightness(94%)
-                                    contrast(87%);
+                                filter: var(--like-react-btn);
                             }
                         }
 
@@ -153,12 +157,10 @@
                         }
 
                         .like-active {
-                            color: #2374e1;
+                            color: var(--like-react-color);
                             font-weight: 600;
                             img {
-                                filter: invert(53%) sepia(90%) saturate(5524%)
-                                    hue-rotate(203deg) brightness(94%)
-                                    contrast(87%);
+                                filter: var(--like-react-btn);
                             }
                         }
 
