--- a/src/Layout/Header/header.scss
+++ b/src/Layout/Header/header.scss
@@ -24,7 +24,7 @@
         max-width: 23.3%;
         height: 100%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         // overflow: hidden;
 
         a {
