--- a/src/Pages/Feed/feed.scss
+++ b/src/Pages/Feed/feed.scss
@@ -48,7 +48,7 @@
     }
 
     &-col-central {
-        margin: 0 23.3%;
+        margin-left: 23.3%;
         flex: 1;
         display: flex;
         justify-content: center;
@@ -87,6 +87,12 @@
                                 font-size: 1.2rem;
                             }
                         }
+                    }
+
+                    &-caption {
+                        margin: 8px 16px 0;
+                        font-size: 1.5rem;
+                        color: var(--text-primary);
                     }
 
                     &-body {
@@ -181,7 +187,48 @@
     }
 
     .feed-col-side.col-2 {
-        position: fixed;
         right: 0;
+
+        h1 {
+            color: var(--text-primary);
+            margin: 16px;
+            margin-left: 0;
+        }
+
+        .friend-card {
+            display: flex;
+            align-items: center;
+            padding: 16px;
+            background-color: var(--post-background-color);
+
+            margin-right: 20px;
+            margin-bottom: 4px;
+            border-radius: 4px;
+
+            &:hover {
+                opacity: 0.8;
+                cursor: pointer;
+            }
+
+            &-avatar {
+                width: 48px;
+                height: 48px;
+                border-radius: 50%;
+                margin-right: 16px;
+            }
+
+            &-info {
+                flex: 1;
+            }
+
+            &-fullname {
+                font-size: 1.6rem;
+                color: var(--text-primary);
+            }
+
+            &-username {
+                color: var(--text-secondary);
+            }
+        }
     }
 }
