--- a/src/Components/PostCard/postCard.scss
+++ b/src/Components/PostCard/postCard.scss
@@ -14,6 +14,7 @@
             width: 40px;
             height: 40px;
             border-radius: 20px;
+            cursor: pointer;
         }
 
         .header-info {
@@ -22,6 +23,7 @@
                 color: var(--text-primary);
                 font-size: 1.6rem;
                 font-weight: 500;
+                cursor: pointer;
             }
             .posted-at {
                 color: #909296;
