--- a/src/Components/PostCard/postCard.scss
+++ b/src/Components/PostCard/postCard.scss
@@ -24,6 +24,7 @@
                 font-size: 1.6rem;
                 font-weight: 500;
                 cursor: pointer;
+                width: fit-content;
             }
             .posted-at {
                 color: #909296;
